tests/paczka1/fuzzy1/94995249.err
Error in line 1: k2TaTFrsVs A934 72,2
Error in line 18: TL1DVNIFvNP A430 70,5
Error in line 24: TL1DVNIFvNP S227 13,7
Error in line 28: A934 S558 10,9
